After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695948 - GtkFontButton sets wrong show-preview-entry
GtkFontButton sets wrong show-preview-entry
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-03-16 02:37 UTC by Morten Welinder
Modified: 2013-03-17 21:11 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Morten Welinder 2013-03-16 02:37:33 UTC
gnm_font_button_init says...

  font_button->priv->show_preview_entry = FALSE;

...but gtkfontchooser.c says it should default to TRUE:

  g_object_interface_install_property
     (iface,
      g_param_spec_boolean ("show-preview-entry",
                          P_("Show preview text entry"),
                          P_("Whether the preview text entry is shown or not"),
                          TRUE,
                          GTK_PARAM_READWRITE));