GtkFontButton: default show-preview-entry to TRUE

This is what the property declaration says, after all.
https://bugzilla.gnome.org/show_bug.cgi?id=695948